--- a/css/main.css
+++ b/css/main.css
@@ -375,7 +375,7 @@ li.dropdown {
 
 .progress-bar {
   height: 4px;
-  background: #347653;
+  background: #606060;
   width: 0%;
 }
 
@@ -544,4 +544,12 @@ li.dropdown {
     
     
     
+}
+
+
+/*************************************************************************************************************************************************************/
+
+@media screen and (max-width: 1280px)
+{
+    #fullpage {display: none}
 }
