--- a/css/main.css
+++ b/css/main.css
@@ -547,9 +547,27 @@ li.dropdown {
 }
 
 
+.messagecontainer
+{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    z-index: 1;
+    background-color: #F3F3F3;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+    display:none;
+}
+
 /*************************************************************************************************************************************************************/
 
 @media screen and (max-width: 1280px)
 {
     #fullpage {display: none}
+    .topnavcontainer {display: none}
+    .messagecontainer {display: flex}
 }
